fluxcd/apps/overlays/production/fairer-pages/httproute-xylem-1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fairer-pages-xylem-1
  namespace: tingle-tuner
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: xylem-gateway
      namespace: arylls-lookout
  hostnames:
    # Note: 16 hostnames max should be assigned to each "httproute-<name>-<#>.yaml"

    - "code.pcfae.com"
    - "convertx.pcfae.com"
    - "cr.pcfae.com"
    - "crowdsec.pcfae.com"
    - "design.pcfae.com"
    - "dl.pcfae.com"
    - "dns.pcfae.com"
    - "dns2.pcfae.com"
    - "draw.pcfae.com"
    - "emulatorjs.pcfae.com"
    - "flowy.pcfae.com"
    - "flux.pcfae.com"
    - "fotos.pcfae.com"
    - "grafana.pcfae.com"
    - "guacamole.pcfae.com"
    - "gwfonts.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /fairer-pages/
      backendRefs:
        - name: fairer-pages
          port: 8023
